[gd_scene load_steps=25 format=3 uid="uid://cn620q1tuk8ha"]

[ext_resource type="Script" path="res://source/actors/player/player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cs8on8uwk6dd1" path="res://source/actors/player/camera.tscn" id="2"]
[ext_resource type="Script" path="res://source/actors/player/bob_controller.gd" id="2_n0c15"]
[ext_resource type="Script" path="res://source/actors/misc/fire_light.gd" id="4"]
[ext_resource type="Material" uid="uid://6l1ko2kw0opd" path="res://source/assets/particles/ambient_particles.tres" id="4_sn5wa"]
[ext_resource type="PackedScene" uid="uid://lyhy6lr0j6hy" path="res://source/actors/player/random_sound_manager.tscn" id="5_8g41b"]
[ext_resource type="AudioStream" uid="uid://c26ecgvwwpjek" path="res://source/assets/sounds/liquid/gulp.ogg" id="5_386p0"]
[ext_resource type="AudioStream" uid="uid://dcxxknwjj7cqk" path="res://source/assets/sounds/rucksack/rucksack_4.ogg" id="8_7f7qv"]
[ext_resource type="AudioStream" uid="uid://dqap21jiqu5gq" path="res://source/assets/sounds/misc/fear.ogg" id="8_ulhip"]
[ext_resource type="AudioStream" uid="uid://bq7tbm4dgtm2j" path="res://source/assets/sounds/rucksack/rucksack_5.ogg" id="9_un0ps"]
[ext_resource type="Script" path="res://source/actors/player/affliction_timer.gd" id="10_iw64y"]
[ext_resource type="AudioStream" uid="uid://d3pakvmqmjlr0" path="res://source/assets/sounds/rucksack/rucksack_6.ogg" id="10_vyll3"]
[ext_resource type="AudioStream" uid="uid://c7bxvp10bg6g2" path="res://source/assets/sounds/horror_sounds/fear_pulse_loop.ogg" id="11_nxucy"]

[sub_resource type="Animation" id="Animation_dqclq"]
resource_name = "timer"
length = 4.5e+06
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crvps"]
_data = {
"timer": SubResource("Animation_dqclq")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8awoy"]
height = 2.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2fjcf"]
height = 1.0

[sub_resource type="Animation" id="Animation_q2cha"]
resource_name = "torch_light_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head_controller/base_light:omni_range")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3.0, 12.0, 12.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ha0pu"]
_data = {
"torch_light_anim": SubResource("Animation_q2cha")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_68otk"]
shading_mode = 0
albedo_color = Color(0.109804, 0.109804, 0.109804, 1)
disable_receive_shadows = true
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_occu0"]
material = SubResource("StandardMaterial3D_68otk")
size = Vector2(0.1, 0.1)
orientation = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v4sui"]
random_pitch = 1.1
streams_count = 3
stream_0/stream = ExtResource("8_7f7qv")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_un0ps")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_vyll3")
stream_2/weight = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_helq8"]
radius = 8.0

[sub_resource type="SphereShape3D" id="SphereShape3D_6dsv4"]
radius = 10.0

[node name="player" type="CharacterBody3D"]
collision_layer = 2
slide_on_ceiling = false
floor_constant_speed = true
floor_max_angle = 0.872665
floor_snap_length = 1.0
script = ExtResource("1")
debug_has_torch = true

[node name="head_controller" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="bob_controller" type="Node3D" parent="head_controller"]
script = ExtResource("2_n0c15")

[node name="camera" parent="head_controller/bob_controller" instance=ExtResource("2")]
cull_mask = 1048573

[node name="viewport_cont" type="SubViewportContainer" parent="head_controller/bob_controller/camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="torch_cam_viewport" type="SubViewport" parent="head_controller/bob_controller/camera/viewport_cont"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(512, 288)
render_target_update_mode = 4

[node name="torch_cam" type="Camera3D" parent="head_controller/bob_controller/camera/viewport_cont/torch_cam_viewport"]
cull_mask = 2

[node name="interact_raycast" type="RayCast3D" parent="head_controller/bob_controller/camera"]
target_position = Vector3(0, 0, -3)
collision_mask = 32769
collide_with_areas = true

[node name="torch_pos" type="Marker3D" parent="head_controller/bob_controller/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.16893, -0.933719, -1.17252)

[node name="held_item_marker" type="Marker3D" parent="head_controller/bob_controller/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, -2)

[node name="bob_timer" type="AnimationPlayer" parent="head_controller/bob_controller"]
libraries = {
"": SubResource("AnimationLibrary_crvps")
}

[node name="base_light" type="OmniLight3D" parent="head_controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.805, 0)
layers = 3
light_energy = 0.75
omni_range = 3.0
script = ExtResource("4")

[node name="random_sound_manager" parent="head_controller" instance=ExtResource("5_8g41b")]

[node name="standing_collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_8awoy")

[node name="crouching_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.852, 0)
shape = SubResource("CapsuleShape3D_2fjcf")

[node name="torch_light_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ha0pu")
}

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48871, 0)
cast_shadow = 0
amount = 2300
lifetime = 5.0
process_material = ExtResource("4_sn5wa")
draw_pass_1 = SubResource("PlaneMesh_occu0")

[node name="floor_type_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0)
target_position = Vector3(0, -3, 0)
collision_mask = 8192
hit_from_inside = true
collide_with_areas = true

[node name="water_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0)
target_position = Vector3(0, -2.65, 0)
collision_mask = 5
collide_with_areas = true
collide_with_bodies = false

[node name="noise_player" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48871, 0)
stream = ExtResource("5_386p0")

[node name="rucksack_player" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48871, 0)
stream = SubResource("AudioStreamRandomizer_v4sui")
max_polyphony = 5

[node name="fear_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ulhip")

[node name="fear_pulse_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nxucy")
volume_db = 10.0

[node name="affliction_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true
script = ExtResource("10_iw64y")

[node name="allow_interactable_sheen_area" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 32768
monitorable = false

[node name="collision_shape" type="CollisionShape3D" parent="allow_interactable_sheen_area"]
shape = SubResource("SphereShape3D_helq8")

[node name="fire_burning_sound_area" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16384

[node name="collision_shape" type="CollisionShape3D" parent="fire_burning_sound_area"]
shape = SubResource("SphereShape3D_6dsv4")

[connection signal="area_entered" from="allow_interactable_sheen_area" to="." method="_on_allow_interactable_sheen_area_area_entered"]
[connection signal="area_exited" from="allow_interactable_sheen_area" to="." method="_on_allow_interactable_sheen_area_area_exited"]
[connection signal="area_entered" from="fire_burning_sound_area" to="." method="_on_fire_burning_sound_area_area_entered"]
[connection signal="area_exited" from="fire_burning_sound_area" to="." method="_on_fire_burning_sound_area_area_exited"]
